[gd_scene load_steps=3 format=3 uid="uid://vg2aclpel2hb"]

[ext_resource type="Script" uid="uid://d0cjj5x3kik2k" path="res://area/stay_inside.gd" id="1_toq2m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gic3k"]
size = Vector2(612, 84)

[node name="Area2D" type="Area2D"]
script = ExtResource("1_toq2m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gic3k")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
